src/test/examples/custom/invalid/syntaxErr/bitwise/missingOperand.wacc
# operator missing first operand

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  int a = & 42
end
